# dmino_glfwtest

./: .gitignore  Aims.txt  CMakeLists.txt  CMakePresets.json  README.md  config.h.in  vcpkg.json
include/: MainScene.hpp  typedefs.hpp
include/assets/: Assets.hpp  BaseAsset.hpp
include/core/: Logger.hpp  MemoryTracker.hpp  Time.hpp
include/engine/: Engine.hpp  EventSystem.hpp  IScene.hpp
include/graphics/: Mesh.hpp  Shader.hpp  Texture.hpp
include/graphics/core/: CubeMap.hpp  Image.hpp  (+9 more)
include/objects/: Voxel.hpp
include/scenes/: AOPGScene.hpp  MainScene.hpp  PointShadows_sc.hpp  ShadowMap_sc.hpp  VoidScene_sc.hpp
include/test/: Voxel.hpp
include/utils/: Buffer.hpp  Transform.hpp  ref_ptr.hpp
include/window/: Camera.hpp  InputKeys.hpp  InputManager.hpp  Window.hpp
res/shaders/: advanced.frag  advanced.vert  depth_test.frag  diffuse_map.frag  framebuffer.frag  framebuffer.vert  instance.vert  light.frag  light_test.frag  light_test.vert  multiple_lights.frag  point_light.frag  reflect.frag  reflect.vert  sky_box.frag  sky_box.vert  spot_light.frag  standart.frag  standart.vert  stencil_test.frag  ui.frag  ui.vert
src/: MainScene.cpp  main.cpp
src/core/: Logger.cpp  MemoryTracker.cpp  Time.cpp
src/engine/: Engine.cpp  EventSystem.cpp
src/graphics/: Mesh.cpp  Shader.cpp  Texture.cpp
src/objects/: Voxel.cpp
src/scenes/: AOPGScene.cpp  MainScene.cpp  PointShadows_sc.cpp  ShadowMap_sc.cpp  VoidScene_sc.cpp
src/test/: Voxel.cpp
src/utils/: Transform.cpp
src/window/: Camera.cpp  InputManager.cpp  Window.cpp
temp/: Canvas.cpp  Canvas.hpp
(+42 files in other folders)
